@@ -27,7 +27,6 @@ import java.security.NoSuchAlgorithmException;
 import java.text.ParseException;
 import java.util.Date;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.regex.Pattern;
 
 import org.apache.ivy.Ivy;
@@ -188,17 +187,17 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
 
     public long getDefaultTTL() {
         if (defaultTTL == null) {
-            defaultTTL = new Long(parseDuration(settings.getVariable("ivy.cache.ttl.default")));
+            defaultTTL = Long.valueOf(parseDuration(settings.getVariable("ivy.cache.ttl.default")));
         }
         return defaultTTL.longValue();
     }
 
     public void setDefaultTTL(long defaultTTL) {
-        this.defaultTTL = new Long(defaultTTL);
+        this.defaultTTL = Long.valueOf(defaultTTL);
     }
 
     public void setDefaultTTL(String defaultTTL) {
-        this.defaultTTL = new Long(parseDuration(defaultTTL));
+        this.defaultTTL = Long.valueOf(parseDuration(defaultTTL));
     }
 
     public String getDataFilePattern() {
@@ -295,10 +294,9 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
 
             return days * MILLIS_IN_DAY + hours * MILLIS_IN_HOUR + minutes * MILLIS_IN_MINUTES
                     + seconds * MILLIS_IN_SECONDS + millis;
-        } else {
-            throw new IllegalArgumentException("invalid duration '" + duration
-                    + "': it must match " + DURATION_PATTERN.pattern() + " or 'eternal'");
         }
+        throw new IllegalArgumentException("invalid duration '" + duration
+                + "': it must match " + DURATION_PATTERN.pattern() + " or 'eternal'");
     }
 
     private int getGroupIntValue(java.util.regex.Matcher m, int groupNumber) {
@@ -309,19 +307,14 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
     /**
      * True if this cache should check lastmodified date to know if ivy files are up to date.
      * 
-     * @return
+     * @return boolean
      */
     public boolean isCheckmodified() {
         if (checkmodified == null) {
-            if (getSettings() != null) {
-                String check = getSettings().getVariable("ivy.resolver.default.check.modified");
-                return check != null ? Boolean.valueOf(check).booleanValue() : false;
-            } else {
-                return false;
-            }
-        } else {
-            return checkmodified.booleanValue();
+            return getSettings() != null && Boolean
+                    .parseBoolean(getSettings().getVariable("ivy.resolver.default.check.modified"));
         }
+        return checkmodified.booleanValue();
     }
 
     public void setCheckmodified(boolean check) {
@@ -334,14 +327,9 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
      */
     public boolean isUseOrigin() {
         if (useOrigin == null) {
-            if (getSettings() != null) {
-                return getSettings().isDefaultUseOrigin();
-            } else {
-                return false;
-            }
-        } else {
-            return useOrigin.booleanValue();
+            return getSettings() != null && getSettings().isDefaultUseOrigin();
         }
+        return useOrigin.booleanValue();
     }
 
     public void setUseOrigin(boolean b) {
@@ -384,9 +372,8 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
     private File getArchiveFileInCache(Artifact artifact, ArtifactOrigin origin, boolean useOrigin) {
         if (useOrigin && !ArtifactOrigin.isUnknown(origin) && origin.isLocal()) {
             return Checks.checkAbsolute(origin.getLocation(), artifact + " origin location");
-        } else {
-            return new File(getRepositoryCacheRoot(), getArchivePathInCache(artifact, origin));
         }
+        return new File(getRepositoryCacheRoot(), getArchivePathInCache(artifact, origin));
     }
 
     public String getArchivePathInCache(Artifact artifact) {
@@ -396,9 +383,8 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
     public String getArchivePathInCache(Artifact artifact, ArtifactOrigin origin) {
         if (isOriginalMetadataArtifact(artifact)) {
             return IvyPatternHelper.substitute(getIvyPattern() + ".original", artifact, origin);
-        } else {
-            return IvyPatternHelper.substitute(getArtifactPattern(), artifact, origin);
         }
+        return IvyPatternHelper.substitute(getArtifactPattern(), artifact, origin);
     }
 
     /**
@@ -532,7 +518,7 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
                     // origin. We must parse the key as we do not know for sure what the original
                     // artifact is named.
                     String ownLocationKey = getLocationKey(artifact);
-                    for (Entry<Object, Object> entry : cdf.entrySet()) {
+                    for (Map.Entry<Object, Object> entry : cdf.entrySet()) {
                         if (entry.getValue().equals(location)
                                 && !ownLocationKey.equals(entry.getKey())) {
                             // found a match, key is
@@ -574,7 +560,7 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
                 origin.setLastChecked(Long.valueOf(lastChecked));
             }
             if (exists != null) {
-                origin.setExist(Boolean.valueOf(exists).booleanValue());
+                origin.setExist(Boolean.parseBoolean(exists));
             }
 
             return origin;
@@ -705,24 +691,23 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
         try {
             if (settings.getVersionMatcher().isDynamic(mrid)) {
                 String resolvedRevision = getResolvedRevision(expectedResolver, mrid, options);
-                if (resolvedRevision != null) {
-                    Message.verbose("found resolved revision in cache: " + mrid + " => "
-                            + resolvedRevision);
+                if (resolvedRevision == null) {
+                    return null;
+                }
+                Message.verbose("found resolved revision in cache: " + mrid + " => "
+                        + resolvedRevision);
 
-                    // we have found another module in the cache, make sure we unlock
-                    // the original module
-                    unlockMetadataArtifact(mrid);
-                    mrid = ModuleRevisionId.newInstance(mrid, resolvedRevision);
+                // we have found another module in the cache, make sure we unlock
+                // the original module
+                unlockMetadataArtifact(mrid);
+                mrid = ModuleRevisionId.newInstance(mrid, resolvedRevision);
 
-                    // don't forget to request a lock on the new module!
-                    if (!lockMetadataArtifact(mrid)) {
-                        Message.error("impossible to acquire lock for " + mrid);
+                // don't forget to request a lock on the new module!
+                if (!lockMetadataArtifact(mrid)) {
+                    Message.error("impossible to acquire lock for " + mrid);
 
-                        // we couldn't lock the new module, so no need to unlock it
-                        unlock = false;
-                        return null;
-                    }
-                } else {
+                    // we couldn't lock the new module, so no need to unlock it
+                    unlock = false;
                     return null;
                 }
             }
@@ -775,11 +760,10 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
                                 }
                             }
                             return new ResolvedModuleRevision(resolver, artResolver, depMD, madr);
-                        } else {
-                            Message.debug("found module in cache but with a different resolver: "
-                                    + "discarding: " + mrid + "; expected resolver="
-                                    + expectedResolver + "; resolver=" + resolver.getName());
                         }
+                        Message.debug("found module in cache but with a different resolver: "
+                                + "discarding: " + mrid + "; expected resolver="
+                                + expectedResolver + "; resolver=" + resolver.getName());
                     } else {
                         Message.debug("\tresolver not found: " + resolverName
                                 + " => cannot use cached ivy file for " + mrid);
@@ -853,7 +837,6 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
             return null;
         }
         try {
-            String resolvedRevision = null;
             if (options.isForce()) {
                 Message.verbose("refresh mode: no check for cached resolved revision for " + mrid);
                 return null;
@@ -865,7 +848,7 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
             } else {
                 cachedResolvedRevision = getCachedDataFile(mrid);
             }
-            resolvedRevision = cachedResolvedRevision.getProperty("resolved.revision");
+            String resolvedRevision = cachedResolvedRevision.getProperty("resolved.revision");
             if (resolvedRevision == null) {
                 Message.verbose(getName() + ": no cached resolved revision for " + mrid);
                 return null;
@@ -1173,13 +1156,12 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
      * @return the hash
      */
     private String computeResourceNameHash(Resource resource) {
-        byte[] shaDigest;
         try {
-            shaDigest = SHA_DIGEST.digest(resource.getName().getBytes("UTF-8"));
+            byte[] shaDigest = SHA_DIGEST.digest(resource.getName().getBytes("UTF-8"));
+            return HexEncoder.encode(shaDigest);
         } catch (UnsupportedEncodingException e) {
             throw new RuntimeException("UTF-8 not supported", e);
         }
-        return HexEncoder.encode(shaDigest);
     }
 
     /**
@@ -1203,18 +1185,13 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
         if (savedOrigin.getLastChecked() != null
                 && (time - savedOrigin.getLastChecked().longValue()) < ttl) {
             // still in the ttl period, no need to check, trust the cache
-            if (!archiveFile.exists()) {
-                // but if the local archive doesn't exist, trust the cache only if the cached origin
-                // says that the remote resource doesn't exist either
-                return !savedOrigin.isExists();
-            }
-            return true;
+            return archiveFile.exists() || !savedOrigin.isExists();
         }
         if (!archiveFile.exists()) {
             // the the file doesn't exist in the cache, obviously not up to date
             return false;
         }
-        origin.setLastChecked(new Long(time));
+        origin.setLastChecked(Long.valueOf(time));
         // check if the local resource is up to date regarding the remote one
         return archiveFile.lastModified() >= resource.getLastModified();
     }
@@ -1317,16 +1294,15 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
                                 + mrid);
                         rmr.getReport().setSearched(true);
                         return rmr;
-                    } else {
-                        Message.verbose("\t" + getName()
-                                + ": revision in cache is not up to date: " + mrid);
-                        if (isChanging(dd, mrid, options)) {
-                            // ivy file has been updated, we should see if it has a new publication
-                            // date to see if a new download is required (in case the dependency is
-                            // a changing one)
-                            cachedPublicationDate = rmr.getDescriptor()
-                                    .getResolvedPublicationDate();
-                        }
+                    }
+                    Message.verbose("\t" + getName()
+                            + ": revision in cache is not up to date: " + mrid);
+                    if (isChanging(dd, mrid, options)) {
+                        // ivy file has been updated, we should see if it has a new publication
+                        // date to see if a new download is required (in case the dependency is
+                        // a changing one)
+                        cachedPublicationDate = rmr.getDescriptor()
+                                .getResolvedPublicationDate();
                     }
                 }
             }
@@ -1359,9 +1335,8 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
                     parserSettings);
                 if (md == null) {
                     throw new IllegalStateException(
-                            "module descriptor parser returned a null module descriptor, "
-                                    + "which is not allowed. " + "parser=" + parser
-                                    + "; parser class=" + parser.getClass().getName()
+                            "module descriptor parser returned a null module descriptor, which is not allowed. parser="
+                                    + parser + "; parser class=" + parser.getClass().getName()
                                     + "; module descriptor resource=" + mdRef.getResource());
                 }
                 Message.debug("\t" + getName() + ": parsed downloaded md file for " + mrid
@@ -1376,11 +1351,9 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
                     deleteOldArtifacts = true;
                 }
                 if (deleteOldArtifacts) {
-                    String[] confs = md.getConfigurationsNames();
-                    for (int i = 0; i < confs.length; i++) {
-                        Artifact[] arts = md.getArtifacts(confs[i]);
-                        for (int j = 0; j < arts.length; j++) {
-                            Artifact transformedArtifact = NameSpaceHelper.transform(arts[j],
+                    for (String conf : md.getConfigurationsNames()) {
+                        for (Artifact art : md.getArtifacts(conf)) {
+                            Artifact transformedArtifact = NameSpaceHelper.transform(art,
                                 options.getNamespace().getToSystemTransformer());
                             ArtifactOrigin origin = getSavedArtifactOrigin(transformedArtifact);
                             File artFile = getArchiveFileInCache(transformedArtifact, origin, false);
@@ -1462,7 +1435,7 @@ public class DefaultRepositoryCacheManager implements RepositoryCacheManager, Iv
         return new DefaultArtifact(mrid, new Date(), "metadata", "metadata", "ivy", true);
     }
 
-    // not used any more, but maybe useful for finer grain locking when downloading artifacts
+    // not used any more, but may be useful for finer grained locking when downloading artifacts
     // private boolean lockArtifact(Artifact artifact) {
     // try {
     // return getLockStrategy().lockArtifact(artifact,
